Bug 407985 Autocomplete search engine image should not be stretched r=stefanh

--- a/suite/browser/navigator.css
+++ b/suite/browser/navigator.css
@@ -38,6 +38,7 @@ panel[for="urlbar"] {
 
 .autocomplete-search-engine {
   -moz-binding: url("chrome://navigator/content/urlbarBindings.xml#autocomplete-search-engine");
+  -moz-box-align: center;
 }
 
 
